Heart beat mechanism - recovering all tasks